feat(Ex3): add role everyone + user grant token
