# src/controllers/authentication.controller.ts
@@ -1,30 +1,21 @@
-import {Controller, Post, Body, Route, Tags} from "tsoa";
-import * as jwt from "jsonwebtoken";
-import {AuthenticationInputDTO, AuthenticationOutputDTO} from "../dto/authentication.dto";
-import {userService} from "../services/user.service";
-import {rolesPermissions, Role} from "../config/role";
+import { Route, Controller, Post, Body } from "tsoa";
+import { AuthenticationInputDTO } from "../dto/authentication.dto";
+import { authService } from "../services/authentication.service";
 
 @Route("auth")
-@Tags("Authentication")
 export class AuthenticationController extends Controller {
     @Post("/")
     public async authenticate(
-        @Body() requestBody: AuthenticationInputDTO
-    ): Promise<AuthenticationOutputDTO> {
-        const {username, password} = requestBody;
-        const user = await userService.validateUser(username, password);
-
-        if (!user) {
-            throw new Error("Invalid credentials");
+        @Body() body: AuthenticationInputDTO
+    ) {
+        const { grant_type, username, password } = body;
+        if (grant_type !== "password") {
+            let error = new Error("Invalid grant_type");
+            (error as any).status = 400;
+            throw error;
         }
+        const token = await authService.authenticate(username, password);
 
-        const JWT_SECRET = process.env.JWT_SECRET || 'your_secret_key';
-        const role = user.username as Role;
-        const permissions = rolesPermissions[role];
-        const token = jwt.sign({id: user.id, username: user.username, role, permissions}, JWT_SECRET, {
-            expiresIn: "1h",
-        });
-
-        return {message: "Authentication successful", token};
+        return { token };
     }
 }
